<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewProfileImage"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/twitter_profile_image" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/imageViewProfileImage"
        tools:text="@string/tweet_title" />

    <TextView
        android:id="@+id/textViewTweetDescription"
        android:layout_below="@+id/textViewUsername"
        android:layout_toEndOf="@+id/imageViewProfileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        tools:text="@string/tweet_description" />

</RelativeLayout>