<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="@color/colorWhite"
    tools:context="com.tweeter.assignment.LoginActivity" >

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_width="300dp"
        android:layout_height="178dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        android:contentDescription="@string/twitter_profile_image" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25dp"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:text="@string/why_twitter"/>
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:text="@string/login_label" />

</LinearLayout>