<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tweeter.assignment.ComposeActivity">

    <EditText
        android:id="@+id/etCompose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/why_twitter"
        android:maxLength="280"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:autofillHints="@string/why_twitter" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="15dp"
            android:text="@string/text_limit" />

        <Button
            android:id="@+id/btnTweet"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="15dp"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/tweet" />
    </LinearLayout>

</LinearLayout>